# Multi-Channel-Engineering-Task-Board

./: .env.defaults  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  config.py  events.py  main.py  models.py  pyproject.toml  store.py
backend/api/: mail.py  schemas.py  tasks.py  websocket.py
backend/channels/: email_poller.py  telegram_bot.py
backend/integrations/: email_client.py  weather.py
backend/services/: command_service.py  task_service.py
frontend/: app.js  index.html  mail.html  mail.js  style.css
